# streaker-old

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: defs.hh  frame.hh  padding.hh  parser.hh  path.hh  range.hh  status.hh  streak.hh  streaker.hh
include/streaker/: Format.hh  Padding.hh  Parser.hh  Range.hh  Status.hh  Streak.hh  Streaker.hh
include/streaker/file/: AbstractFile.hh  FrameFile.hh  SequenceFile.hh
src/: CMakeLists.txt  Format.cc  Makefile  Parser.cc  Range.cc  Streak.cc  Streaker.cc  frame.cc  main.cc  padding.cc  parser.cc  path.cc  range.cc  streak.cc  streaker.cc
src/file/: AbstractFile.cc  FrameFile.cc  SequenceFile.cc
src/pystreak/: CMakeLists.txt  pystreak.cc
tests/cpp/: CMakeLists.txt  streakerTest.cc  testFrame.cc  testMain.cc  testPadding.cc  testParser.cc  testRange.cc  testStreak.cc
