cmake_minimum_required(VERSION 3.5)
project(streaker)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(STREAKER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(STREAKER_INCLUDE_DIR ${STREAKER_ROOT_DIR}/include)
set(STREAKER_SRC_DIR ${STREAKER_ROOT_DIR}/src)
set(STREAKER_LIB_DIR ${STREAKER_ROOT_DIR}/lib)
set(STREAKER_BIN_DIR ${STREAKER_ROOT_DIR}/bin)
set(STREAKER_EXTERNAL_DIR ${STREAKER_ROOT_DIR}/external)
set(STREAKER_TEST_DIR ${STREAKER_ROOT_DIR}/tests)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${STREAKER_LIB_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${STREAKER_LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${STREAKER_BIN_DIR})

set(CMAKE_BINARY_DIR ${STREAKER_BIN_DIR})

# Make a .so output!
if(APPLE)
    set(CMAKE_SHARED_LIBRARY_SUFFIX ".so")
endif(APPLE)

find_package(Boost 1.45.0 COMPONENTS filesystem regex program_options)
find_package(PythonLibs 2.7 REQUIRED)

include_directories(${STREAKER_INCLUDE_DIR})

add_subdirectory(${STREAKER_SRC_DIR})
add_subdirectory(${STREAKER_EXTERNAL_DIR})
add_subdirectory(${STREAKER_TEST_DIR})
